--- a/phoneClients/android/app/src/main/res/values/colors.xml
+++ b/phoneClients/android/app/src/main/res/values/colors.xml
@@ -1,7 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <color name="colorPrimary">#21282E</color>
-    <color name="colorPrimaryDark">#1D2328</color>
-    <color name="colorAccent">#0080E5</color>
-    <color name="colorText">#FFFFFF</color>
-</resources>
+<resources></resources>
