--- a/phoneClients/android/app/src/main/res/values/themes.xml
+++ b/phoneClients/android/app/src/main/res/values/themes.xml
@@ -4,7 +4,8 @@
     <style name="AppTheme" parent="@style/Theme.AppCompat.DayNight.NoActionBar" />
 
     <style name="AppTheme.Splash" parent="Theme.SplashScreen">
-        <item name="windowSplashScreenAnimatedIcon">@drawable/splash_logo_mini</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/empty</item>
+        <item name="windowSplashScreenIconBackgroundColor">@null</item>
         <item name="windowSplashScreenBackground">#0080E5</item>
         <item name="postSplashScreenTheme">@style/AppTheme</item>
     </style>
